--- a/OCRExample/OCRExample.csproj
+++ b/OCRExample/OCRExample.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0-beta.3" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 
