--- a/OCRExample/OCRExample.csproj
+++ b/OCRExample/OCRExample.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.AI.Vision.ImageAnalysis" Version="1.0.0-beta.3" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.ComputerVision" Version="7.0.1" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
 
